Создание HTML разметки catalogs

--- a/html/catalogs.html
+++ b/html/catalogs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,21 +20,21 @@
     <main>
         <section>
             <ul>
-            <li><a href=""> <img src="../image/directions/image1.svg" alt=""> Наружная реклама</a>
+            <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt=""> Наружная реклама</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image2.svg" alt=""> Широкоформатная печать</a>
+            <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt=""> Широкоформатная печать</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image3.svg" alt=""> Рекламная полиграфия</a>
+            <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt=""> Рекламная полиграфия</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image4.svg" alt=""> Сувенирная продукция</a>
+            <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt=""> Сувенирная продукция</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image5.svg" alt=""> Внутренняя реклама</a>
+            <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt=""> Внутренняя реклама</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image6.svg" alt=""> Гравировка и резка</a>
+            <li><a href=""> <img src="../image/directions/image6.svg" width="55" alt=""> Гравировка и резка</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image7.svg" alt=""> Брендирование одежды</a>
+            <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt=""> Брендирование одежды</a>
             </li>
-            <li><a href=""> <img src="../image/directions/image8.svg" alt=""> Брендирование транспорта</a>
+            <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt=""> Брендирование транспорта</a>
             </li>
             </ul>
         </section>
@@ -208,12 +208,42 @@
         <section>
             <h2>Дополнительные услуги</h2>
             <ul>
-                <li><button type="button">Ламинация</button></li>
-                <li><button type="button">УФ печать</button></li>
-                <li><button type="button">Тиснение</button></li>
-                <li><button type="button">Допечатная подготовка</button></li>
-                <li><button type="button">Цветопроба</button></li>
-                <li><button type="button">Персонализация</button></li>
+                <li>
+                    <button type="button">Ламинация</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li>
+                    <button type="button">УФ печать</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li>
+                    <button type="button">Тиснение</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li>
+                    <button type="button">Допечатная подготовка</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li>
+                    <button type="button">Цветопроба</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li>
+                    <button type="button">Персонализация</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
             </ul>
         </section>
         <!-- Наши работы -->
