--- a/html/flyers.html
+++ b/html/flyers.html
@@ -17,6 +17,278 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <ul>
+            <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt="">Наружная реклама</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt="">Широкоформатная печать</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt="">Рекламная полиграфия</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt="">Сувенирная продукция</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt="">Внутренняя реклама</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image6.svg" width="55" alt="">Гравировка и резка</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt="">Брендирование одежды</a>
+            </li>
+            <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt="">Брендирование транспорта</a>
+            </li>
+            </ul>
+        </section>
+        <!-- Каталог и журналы -->
+        <section>
+            <h1>Листовки и флаеры</h1>
+            <p>Листовка или флаер - это эффективный инструмент для развития бизнеса. 
+                Яркий дизайн и качественная печать привлекут внимание потребителя.
+            </p>
+        </section>
+        <div>
+        <img src="../image/catalogs/image10.jpg" alt="образцы листовок и флаеров">
+        </div>
+        <!-- Виды каталогов -->
+        <section>
+            <h2>Виды листовок</h2>
+            <p>Мы стараемся быть ближе к своим клиентам и поэтому производим не только стандартные размеры листовок и флаеров, но и любого другого необходимого вам формата. 
+                Кроме этого мы можем предложить вам широчайший выбор качественной дизайнерской бумаги и картона.
+            </p>
+        </section>
+        <!-- Формат изготовления -->
+        <section>
+            <h2></h2>
+            <ul>
+                <li>
+                    <p>A4  |  297 x 210 мм</p>
+                    <img src="../image/catalogs/image2.jpg" width="210" height="297" alt="">
+                </li>
+                <li>
+                    <p>A5  |  210 x 148 мм</p>
+                    <img src="../image/catalogs/image3.jpg" width="148" height="210" alt="">
+                </li>
+                <li>
+                    <p>98 x 210 мм</p>
+                    <img src="../image/catalogs/image11.jpg" width="98" height="210" alt="">
+                </li>
+                <li>
+                    <p>A6  |  148 x 105 мм</p>
+                    <img src="../image/catalogs/image5.jpg" width="105" height="148" alt="">
+                </li>
+            </ul>
+        </section>
+        <!-- Виды листовок -->
+        <section>
+            <h2>Виды скрепления</h2>
+            <p>Существующие варианты - скобы, термоклеевое крепление, переплет на пружину, прошив нитью. 
+                Выбирая между типами креплений, необходимо учитывать количество страниц будущего каталога. 
+            </p>
+            <ul>
+                <li>
+                    <img src="../image/catalogs/image6.jpg" width="255" height="190" alt="">
+                    <p>Скоба</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image7.jpg" width="255" height="190" alt="">
+                    <p>Термоклей</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image8.jpg" width="255" height="190" alt="">
+                    <p>Пружина</p>
+                </li>
+                <li>
+                    <img src="../image/catalogs/image9.jpg" width="255" height="190" alt="">
+                    <p>КШС</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Стоимость -->
+        <section>
+            <ul>
+                <li><button type="button">Цифровая печать</button></li>
+                <li><button type="button">Офсетная печать</button></li>
+                <li><button type="button">Дизайн</button></li>
+            </ul>
+            <button type="button">Тонкая бумага 130 г/м2</button>
+            <p>Срок печати цифровым способом 1 - 2 дня</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Формат / Цвет</th>
+                        <th>50 шт</th>
+                        <th>100 шт</th>
+                        <th>200 шт</th>
+                        <th>300 шт</th>
+                        <th>400 шт</th>
+                        <th>500 шт</th>
+                        <th>600 шт</th>
+                        <th>800 шт</th>
+                        <th>1000 шт</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>А7 / 4+0</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                    <tr>
+                        <td>А7 / 4+4</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                    <tr>
+                        <td>А6 / 4+0</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                    <tr>
+                        <td>А6 / 4+4</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                    <tr>
+                        <td>98х210 / 4+0</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                    <tr>
+                        <td>98х210 / 4+4</td>
+                        <td>460 &#8381;</td>
+                        <td>580 &#8381;</td>
+                        <td>800 &#8381;</td>
+                        <td>990 &#8381;</td>
+                        <td>1200 &#8381;</td>
+                        <td>1400 &#8381;</td>
+                        <td>1520 &#8381;</td>
+                        <td>1920 &#8381;</td>
+                        <td>2200 &#8381;</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <!-- Доп. Услуги -->
+        <section>
+            <h2>Дополнительные услуги</h2>
+            <ul>
+                <li><button type="button">Ламинация</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li><button type="button">УФ печать</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li><button type="button">Тиснение</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li><button type="button">Допечатная подготовка</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li><button type="button">Цветопроба</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+                <li><button type="button">Персонализация</button>
+                    <img src="" alt="">
+                    <p></p>
+                    <a href="">Прайс-лист</a>
+                </li>
+            </ul>
+        </section>
+        <!-- Наши работы -->
+        <section>
+                    <h2>Наши работы</h2>
+                    <ul>
+                        <li>
+                            <div>
+                                <img src="../image/image1.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Кафе Starbucks Coffee</h3>
+                            <p>Вывеска объемная</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image3.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Сеть ресторанов Emosi</h3>
+                            <p>Вывеска объемная</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image5.jpg" width="360" height="270" alt="img">
+                            </div>
+                            <h3>Релакс студия Flora</h3>
+                            <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                        </li>
+                        <li>
+                            <div>
+                                <img src="../image/image6.jpg" width="360" height="360" alt="img">
+                            </div>
+                            <h3>Магазин Levi's</h3>
+                            <p>Входная группа и вывеска</p>
+                        </li>
+                    </ul>
+                    <button type="button">все работы</button>
+        </section>
+        <!-- Заяка -->
+        <section>
+                    <h2>Заявка</h2>
+                    <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
+                    </p>
+                    <ul>
+                        <li><button type="button">Имя</button></li>
+                        <li><button type="button">Телефон</button></li>
+                        <li><button type="button">Комментарий к заявке</button></li>
+                        <li><button type="button">Прикрепить файл</button></li>
+                        <li><button type="button">отправить</button></li>
+                    </ul>
+                    <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+        </section>
+        <button type="button">Плакаты и постеры</button>
+    </main>
     <footer>
         <div>
             <div>
