--- a/html/flyers.html
+++ b/html/flyers.html
@@ -20,25 +20,25 @@
     <main>
         <section>
             <ul>
-            <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt="">Наружная реклама</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt="">Широкоформатная печать</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt="">Рекламная полиграфия</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt="">Сувенирная продукция</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt="">Внутренняя реклама</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image6.svg" width="55" alt="">Гравировка и резка</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt="">Брендирование одежды</a>
-            </li>
-            <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt="">Брендирование транспорта</a>
-            </li>
+                <li><a href=""> <img src="../image/directions/image1.svg" width="55" alt="">Наружная реклама</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image2.svg" width="55" alt="">Широкоформатная печать</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image3.svg" width="55" alt="">Рекламная полиграфия</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image4.svg" width="55" alt="">Сувенирная продукция</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image5.svg" width="55" alt="">Внутренняя реклама</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image6.svg" width="55" alt="">Гравировка и резка</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image7.svg" width="55" alt="">Брендирование одежды</a>
+                </li>
+                <li><a href=""> <img src="../image/directions/image8.svg" width="55" alt="">Брендирование транспорта</a>
+                </li>
             </ul>
         </section>
-        <!-- Каталог и журналы -->
+        <!-- Листовки и флаеры -->
         <section>
             <h1>Листовки и флаеры</h1>
             <p>Листовка или флаер - это эффективный инструмент для развития бизнеса. 
@@ -48,7 +48,7 @@
         <div>
         <img src="../image/catalogs/image10.jpg" alt="образцы листовок и флаеров">
         </div>
-        <!-- Виды каталогов -->
+        <!-- Виды листовок -->
         <section>
             <h2>Виды листовок</h2>
             <p>Мы стараемся быть ближе к своим клиентам и поэтому производим не только стандартные размеры листовок и флаеров, но и любого другого необходимого вам формата. 
@@ -74,31 +74,6 @@
                 <li>
                     <p>A6  |  148 x 105 мм</p>
                     <img src="../image/catalogs/image5.jpg" width="105" height="148" alt="">
-                </li>
-            </ul>
-        </section>
-        <!-- Виды листовок -->
-        <section>
-            <h2>Виды скрепления</h2>
-            <p>Существующие варианты - скобы, термоклеевое крепление, переплет на пружину, прошив нитью. 
-                Выбирая между типами креплений, необходимо учитывать количество страниц будущего каталога. 
-            </p>
-            <ul>
-                <li>
-                    <img src="../image/catalogs/image6.jpg" width="255" height="190" alt="">
-                    <p>Скоба</p>
-                </li>
-                <li>
-                    <img src="../image/catalogs/image7.jpg" width="255" height="190" alt="">
-                    <p>Термоклей</p>
-                </li>
-                <li>
-                    <img src="../image/catalogs/image8.jpg" width="255" height="190" alt="">
-                    <p>Пружина</p>
-                </li>
-                <li>
-                    <img src="../image/catalogs/image9.jpg" width="255" height="190" alt="">
-                    <p>КШС</p>
                 </li>
             </ul>
         </section>
