Изменение путей IMG

--- a/html/calendars.html
+++ b/html/calendars.html
@@ -253,38 +253,38 @@
         </section>
         <!-- Наши работы -->
         <section>
-                    <h2>Наши работы</h2>
-                    <ul>
-                        <li>
-                            <div>
-                                <img src="../image/image1.jpg" width="360" height="270" alt="img">
-                            </div>
-                            <h3>Кафе Starbucks Coffee</h3>
-                            <p>Вывеска объемная</p>
-                        </li>
-                        <li>
-                            <div>
-                                <img src="../image/image3.jpg" width="360" height="270" alt="img">
-                            </div>
-                            <h3>Сеть ресторанов Emosi</h3>
-                            <p>Вывеска объемная</p>
-                        </li>
-                        <li>
-                            <div>
-                                <img src="../image/image5.jpg" width="360" height="270" alt="img">
-                            </div>
-                            <h3>Релакс студия Flora</h3>
-                            <p>ФИРМЕННЫЙ СТИЛЬ</p>
-                        </li>
-                        <li>
-                            <div>
-                                <img src="../image/image6.jpg" width="360" height="360" alt="img">
-                            </div>
-                            <h3>Магазин Levi's</h3>
-                            <p>Входная группа и вывеска</p>
-                        </li>
-                    </ul>
-                    <button type="button">все работы</button>
+            <h2>Наши работы</h2>
+            <ul>
+                <li>
+                    <div>
+                        <img src="../image/works/image1.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Кафе Starbucks Coffee</h3>
+                    <p>Вывеска объемная</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/works/image2.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Сеть ресторанов Emosi</h3>
+                    <p>Вывеска объемная</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/works/image3.jpg" width="360" height="270" alt="img">
+                    </div>
+                    <h3>Релакс студия Flora</h3>
+                    <p>ФИРМЕННЫЙ СТИЛЬ</p>
+                </li>
+                <li>
+                    <div>
+                        <img src="../image/works/image4.jpg" width="360" height="360" alt="img">
+                    </div>
+                    <h3>Магазин Levi's</h3>
+                    <p>Входная группа и вывеска</p>
+                </li>
+            </ul>
+            <button type="button">все работы</button>
         </section>
         <!-- Заяка -->
         <section>
