--- a/html/catalogs.html
+++ b/html/catalogs.html
@@ -251,22 +251,22 @@
                     <h2>Наши работы</h2>
                     <ul>
                         <li>
-                            <img src="../image/image1.jpg" width="360" height="270" alt="img">
+                            <img src="../image/works/image1.jpg" width="360" height="270" alt="img">
                             <h3>Кафе Starbucks Coffee</h3>
                             <p>Вывеска объемная</p>
                         </li>
                         <li>
-                            <img src="../image/image3.jpg" width="360" height="270" alt="img">
+                            <img src="../image/works/image2.jpg" width="360" height="270" alt="img">
                             <h3>Сеть ресторанов Emosi</h3>
                             <p>Вывеска объемная</p>
                         </li>
                         <li>
-                            <img src="../image/image5.jpg" width="360" height="270" alt="img">
+                            <img src="../image/works/image3.jpg" width="360" height="270" alt="img">
                             <h3>Релакс студия Flora</h3>
                             <p>ФИРМЕННЫЙ СТИЛЬ</p>
                         </li>
                         <li>
-                            <img src="../image/image6.jpg" width="360" height="360" alt="img">
+                            <img src="../image/works/image4.jpg" width="360" height="360" alt="img">
                             <h3>Магазин Levi's</h3>
                             <p>Входная группа и вывеска</p>
                         </li>
