--- a/index.html
+++ b/index.html
@@ -89,42 +89,42 @@
         <ul>
             <li>
                 <div>
-                    <img src="./image/image1.jpg" width="570" height="370" alt="img">
+                    <img src="./image/works/image1.jpg" width="570" height="370" alt="img">
                 </div>
                 <h3>Кафе Starbucks Coffee</h3>
                 <p>Вывеска объемная</p>
             </li>
             <li>
                 <div>
-                    <img src="./image/image2.jpg" width="570" height="570" alt="img">
+                    <img src="./image/works/image7.jpg" width="570" height="570" alt="img">
                 </div>
                 <h3>Bio бутик Flora</h3>
                 <p>наружная реклама</p>
             </li>
             <li>
                 <div>
-                    <img src="./image/image3.jpg" width="570" height="370" alt="img">
+                    <img src="./image/works/image2.jpg" width="570" height="370" alt="img">
                 </div>
                 <h3>Сеть ресторанов Emosi</h3>
                 <p>Вывеска объемная</p>
             </li>
             <li>
                 <div>
-                    <img src="./image/image4.jpg" width="570" height="570" alt="img">
+                    <img src="./image/works/image5.jpg" width="570" height="570" alt="img">
                 </div>
                 <h3>Бизнес центр Sierra</h3>
                 <p>ФИРМЕННЫЙ СТИЛЬ</p>
             </li>
             <li>
                 <div>
-                    <img src="./image/image5.jpg" width="570" height="370" alt="img">
+                    <img src="./image/works/image3.jpg" width="570" height="370" alt="img">
                 </div>
                 <h3>Релакс студия Flora</h3>
                 <p>ФИРМЕННЫЙ СТИЛЬ</p>
             </li>
             <li>
                 <div>
-                    <img src="./image/image6.jpg" width="570" height="570" alt="img">
+                    <img src="./image/works/image4.jpg" width="570" height="570" alt="img">
                 </div>
                 <h3>Магазин Levi's</h3>
                 <p>Входная группа и вывеска</p>
