--- a/html/works.html
+++ b/html/works.html
@@ -30,92 +30,92 @@
             <div>
                 <ul>
                     <li>
-                        <img src="../image/works/image1.jpg" alt="">
+                        <img src="../image/works/image1.jpg" width="360" alt="">
                         <h2>Кафе Starbucks Coffee</h2>
                         <p>Вывеска объемная</p>
                     </li>
                     <li>
-                        <img src="../image/works/image2.jpg" alt="">
+                        <img src="../image/works/image2.jpg" width="360" alt="">
                         <h2>Сеть ресторанов Emosi</h2>
                         <p>Входная группа и вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image3.jpg" alt="">
+                        <img src="../image/works/image3.jpg" width="360" alt="">
                         <h2>Релакс студия Flora</h2>
                         <p>ФИРМЕННЫЙ СТИЛЬ</p>
                     </li>
                     <li>
-                        <img src="../image/works/image4.jpg" alt="">
+                        <img src="../image/works/image4.jpg" width="360" alt="">
                         <h2>Магазин Levi's</h2>
                         <p>Входная группа и вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image5.jpg" alt="">
+                        <img src="../image/works/image5.jpg" width="360" alt="">
                         <h2>Бизнес центр Sierra</h2>
                         <p>ФИРМЕННЫЙ СТИЛЬ</p>
                     </li>
                     <li>
-                        <img src="../image/works/image6.jpg" alt="">
+                        <img src="../image/works/image6.jpg" width="360" alt="">
                         <h2>Салон красоты Bottem</h2>
                         <p>ОБЪЕМНАЯ вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image7.jpg" alt="">
+                        <img src="../image/works/image7.jpg" width="360" alt="">
                         <h2>Bio бутик Flora</h2>
                         <p>наружная реклама</p>
                     </li>
                     <li>
-                        <img src="../image/works/image8.jpg" alt="">
+                        <img src="../image/works/image8.jpg" width="360" alt="">
                         <h2>Фэшн бутик Chanel</h2>
                         <p>Входная группа и вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image9.jpg" alt="">
+                        <img src="../image/works/image9.jpg" width="360" alt="">
                         <h2>SPA центр Pure</h2>
                         <p>фирменный стиль</p>
                     </li>
                     <li>
-                        <img src="../image/works/image10.jpg" alt="">
+                        <img src="../image/works/image10.jpg" width="360" alt="">
                         <h2>Кафе McDonald's</h2>
                         <p>сити-формат</p>
                     </li>
                     <li>
-                        <img src="../image/works/image11.jpg" alt="">
+                        <img src="../image/works/image11.jpg" width="360" alt="">
                         <h2>Магазин одежды adidas</h2>
                         <p>Вывеска объемная</p>
                     </li>
                     <li>
-                        <img src="../image/works/image12.jpg" alt="">
+                        <img src="../image/works/image12.jpg" width="360" alt="">
                         <h2>Бургерная Butcher</h2>
                         <p>Входная группа и вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image13.jpg" alt="">
+                        <img src="../image/works/image13.jpg" width="360" alt="">
                         <h2>Релакс студия Flora</h2>
                         <p>Дизайн и печать открыток</p>
                     </li>
                     <li>
-                        <img src="../image/works/image14.jpg" alt="">
+                        <img src="../image/works/image14.jpg" width="360" alt="">
                         <h2>Системы безопасности Brand</h2>
                         <p>Фирменный стиль</p>
                     </li>
                     <li>
-                        <img src="../image/works/image15.jpg" alt="">
+                        <img src="../image/works/image15.jpg" width="360" alt="">
                         <h2>Детский центр Bukos</h2>
                         <p>дизайн и печать каталогов</p>
                     </li>
                     <li>
-                        <img src="../image/works/image16.jpg" alt="">
+                        <img src="../image/works/image16.jpg" width="360" alt="">
                         <h2>SPA центр Pure</h2>
                         <p>Входная группа и вывеска</p>
                     </li>
                     <li>
-                        <img src="../image/works/image17.jpg" alt="">
+                        <img src="../image/works/image17.jpg" width="360" alt="">
                         <h2>Магазин Geometria</h2>
                         <p>Фирменный стиль</p>
                     </li>
                     <li>
-                        <img src="../image/works/image18.jpg" alt="">
+                        <img src="../image/works/image18.jpg" width="360" alt="">
                         <h2>Бизнес центр Sierra</h2>
                         <p>дизайн и печать визиток</p>
                     </li>
