Создание HTML разметки service

--- a/html/services.html
+++ b/html/services.html
@@ -18,6 +18,7 @@
         </nav>
     </header>
     <main>
+        <!-- Разработка -->
         <section>
             <h1>Сервис</h1>
             <h2>Разработка дизайн-макета</h2>
@@ -31,6 +32,7 @@
             <img src="../image/services/image1.jpg" width="570" alt="">
             <button type="button">Прайс-лист</button>
         </section>
+        <!-- Согласование вывески -->
         <section>
             <h2>Согласование вывески</h2>
             <p>Все виды маркетинговой продукции, которые размещаются на фасадах задний, обязательно нужно согласовывать в комитете по архитектуре
@@ -41,21 +43,109 @@
             </p>
             <ul>
                 <li>
-                    <img src="../image/services/image2.jpg" alt="">
+                    <img src="../image/services/image2.jpg" width="360" alt="">
                     <h3>Варианты размещения</h3>
                     <p>Подбираем для вас оптимальные варианты размещения и оформления рекламных или информационных конструкций.</p>
                 </li>
                 <li>
-                    <img src="../image/services/image3.jpg" alt="">
+                    <img src="../image/services/image3.jpg" width="360" alt="">
                     <h3>Подготовка документов</h3>
                     <p>Подготавливаем необходимые документы и фотоматериалы, разрабатываем эскизы, дизайн-проекты и технические расчеты.</p>
                 </li>
                 <li>
-                    <img src="../image/works/image1.jpg" alt="">
+                    <img src="../image/works/image1.jpg" width="360" alt="">
                     <h3>Согласование документов</h3>
                     <p>Осуществляем согласование документов в соответствующих инстанциях, после чего передаём вам готовый пакет документов.</p>
                 </li>
             </ul>
+            <button type="button">Прайс-лист</button>
+        </section>
+        <!-- Фотопривязка -->
+        <section>
+            <h2>Фотопривязка</h2>
+            <p>C помощью фотопривязки можно предварительно посмотреть как будет размещена и как будет выглядеть, например, вывеска магазина. 
+                Создавая изображение с помощью фотомонтажа, мы учитываем пропорции, масштаб вывески относительно окружающих объектов и стремимся показать её максимально похожей на то, что будет воплощено в реальности.
+                Фотопривязка имеет огромное значение при изготовлении рекламных конструкций разного размера, от простых до самых сложных форм и обязательна для согласования с городом.
+            </p>
+            <img src="../image/services/image4.jpg" width="570" alt="">
+            <button type="button">Прайс-лист</button>
+        </section>
+        <!-- Разработка фирменного стиля -->
+        <section>
+            <h2>Разработка фирменного стиля</h2>
+            <p> Качественный дизайн фирменного стиля является одним из основных гарантов коммерческого успеха. Эффективность продаж, репутация бренда и доверие клиентов - всё это во многом зависит от визуального стиля компании.
+                Профессионально разработанный фирменный стиль становится значимым конкурентным преимуществом любой компании, является неотъемлемой частью имиджа и важнейшим инструментом для продвижения и укрепления позиций на рынке. 
+                Именно такой фирменный стиль мы предлагаем своим клиентам.
+            </p>
+            <div>
+                <img src="../image/interesting/image3.jpg" width="360" alt="">
+                <img src="../image/works/image18.jpg" width="360" alt="">
+                <img src="../image/services/image5.jpg" width="360" alt="">
+            </div>
+            <ul>
+                <li>
+                    <h3>Нейминг</h3>
+                    <p>Оригинальное название бренда является мощнейшим маркетинговым инструментом компании.</p>
+                </li>
+                <li>
+                    <h3>Логотип</h3>
+                    <p>Один из важнейших идентификаторов бренда, предопределяет вектор развития всей визуальной стратегии бренда.</p>
+                </li>
+                <li>
+                    <h3>Фирменная графика</h3>
+                    <p>Фирменная графика раскрывает характер бренда, его идеологию и философию. Продвигает стиль компании в любой информационной среде.</p>
+                </li>
+                <li>
+                    <h3>Фирменные цвета</h3>
+                    <p>Фиксированный набор фирменных цветов, помогает сделать бренд узнаваемым в любом визуализированном пространстве.</p>
+                </li>
+            </ul>
+            <button type="button">Прайс-лист</button>
+        </section>
+        <!-- Монтаж/демонтаж -->
+        <section>
+            <h2>Монтаж/демонтаж</h2>
+            <p>Первое впечатление о организации у посетителя складывается
+                от внешней привлекательности вывески и наружной рекламы. 
+                
+                Поскольку наружное оформление играет немаловажную роль,
+                своим клиентам мы предлагаем профессиональный монтаж
+                и демонтаж наружной рекламы. Монтаж и демонтаж производится
+                в короткие сроки и осуществляется опытными специалистами,
+                что гарантирует качество работ.
+            </p>
+            <img src="../image/services/image6.jpg" width="570" alt="">
+            <button type="button">Прайс-лист</button>
+        </section>
+        <!-- Обслуживание вывесок -->
+        <section>
+            <h2>Обслуживание вывесок</h2>
+            <p>Даже самая качественная наружная реклама требует своевременного обслуживания. 
+                Из-за неблагоприятных погодных условий, порывов ветра, пыли и грязи рекламная конструкция теряет свою привлекательность. 
+                Для того чтобы она служила вам как можно дольше, необходимо своевременно
+                выполнять качественное обслуживание. Мы ценим наших клиентов, поэтому предлагаем весь спектр услуг по её обслуживанию. 
+                Работы выполняются высококвалифицированными специалистами, способными справиться с любой задачей - от мойки и до ремонта.
+            </p>
+            <div>
+                <img src="../image/services/image7.jpg" width="360" alt="">
+                <img src="../image/works/image6.jpg" width="360" alt="">
+                <img src="../image/works/image12.jpg" width="360" alt="">
+            </div>
+            <ul>
+                <li>
+                    <h3>Плановая диагностика</h3>
+                    <p>Диагностика помогает определить степень загрязнения конструкции, необходимость устранения мелких дефектов, крепежа и т.д</p>
+                </li>
+                <li>
+                    <h3>Внутренняя и наружная мойка</h3>
+                    <p>Мойка рекламной конструкции выполняется с использованием профессиональных моющих средств, гарантирующих сохранность цвета.</p>
+                </li>
+                <li>
+                    <h3>Ремонт вывесок</h3>
+                    <p>Мы работаем с разными типами конструкций, осуществляем ремонт любой сложности  и даём гарантию на выполненные работы.</p>
+                </li>
+            </ul>
+            <button type="button">Прайс-лист</button>
         </section>
     </main>
     <footer>
