--- a/html/about.html
+++ b/html/about.html
@@ -114,27 +114,27 @@
         <section>
             <h2>Оборудование</h2>
             <ul>
-                <li><a href="">Фрезерный станок</a>
+                <li><button type="button">Фрезерный станок</button> 
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
                 </li>
-                <li><a href="">Cублимационный плоттер</a>
+                <li><button type="button">Cублимационный плоттер</button> 
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
                 </li>
-                <li><a href="">Принтер</a>
+                <li><button type="button">Принтер</button> 
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
                 </li>
-                <li><a href="">Плоттер-каттер</a>
+                <li><button type="button">Плоттер-каттер</button> 
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
                 </li>
-                <li><a href="">Сольвентный плоттер</a>
+                <li><button type="button">Сольвентный плоттер</button> 
                     <img src="" alt="">
                     <h3></h3>
                     <p></p>
@@ -174,14 +174,14 @@
             <h2>Заявка</h2>
             <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
             </p>
-            <ul>
-                <li><button type="button">Имя</button></li>
-                <li><button type="button">Телефон</button></li>
-                <li><button type="button">Комментарий к заявке</button></li>
-                <li><button type="button">Прикрепить файл</button></li>
-                <li><button type="button">отправить</button></li>
-            </ul>
-            <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+            <form action="">
+                <input type="text" name="username" placeholder="Имя"> <br>
+                <input type="tel" name="telephone" placeholder="Телефон"> <br>
+                <input type="text" name="comment" placeholder="Комментарий к заявке"> <br>
+                <input type="file" name="file">
+                <button type="button">отправить</button>
+                <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+            </form>
         </section>
     </main>
     <footer>
