--- a/html/works.html
+++ b/html/works.html
@@ -21,11 +21,13 @@
         <section>
             <h1>Наши работы</h1>
             <div>
-                <ul>
-                    <li><button type="button">Все услуги</button></li>
-                    <li><p>Сортировать:</p></li>
-                    <li><button type="button">по дате</button></li>
-                </ul>
+                <select name="select" id="">
+                    <option value="">Все услуги</option>
+                </select>
+                <p>Сортировать:</p>
+                <select name="select" id="">
+                    <option value="">По дате</option>
+                </select>
             </div>
             <div>
                 <ul>
