--- a/html/complex.html
+++ b/html/complex.html
@@ -17,6 +17,67 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <h1>Комплексные решения</h1>
+        <p>Для наиболее удачной работы бизнеса мы разработали готовые решения, 
+            которые наиболее оптимально подходят для решения именно ваших задач.
+        </p>
+        <ul>
+            <li>
+                <img src="../image/complex/image1.jpg" width="570" alt="">
+                <h2>Для магазинов</h2>
+                <p>Для оформления товарных отделов часто  используют различные виды рекламной продукции и 
+                    POS-материалы, что позволяет произвести грамотную расстановку товарных групп, 
+                    так чтобы потребитель смог обойти торговое пространство целиком. 
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+            <li>
+                <img src="../image/complex/image2.jpg" width="570" alt="">
+                <h2>Для кафе и ресторанов</h2>
+                <p>Визуальное оформление кафе и ресторанов привлекает наибольшее внимание посетителей и делает заведение 
+                    узнаваемым на фоне многих других точек общественного питания.  
+                    А уникальный фирменный стиль заставят возвращаться посетителей снова и снова.
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+            <li>
+                <img src="../image/complex/image3.jpg" width="570" alt="">
+                <h2>Для АЗС</h2>
+                <p>Огромное значение для успешного ведения дел заправочной станции
+                    имеет рекламное оформление АЗС. Сделать заправочную станцию привлекательной помогут специалисты Promomix. 
+                    Обладающие профильными знаниями и опытом выполнения работ в данной сфере.
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+            <li>
+                <img src="../image/complex/image4.jpg" width="570" alt="">
+                <h2>Для аптек</h2>
+                <p>Фирменный стиль аптеки начинается с тщательного анализа территории,
+                    на которой располагается торговая точка, ближайших конкурентов и самого помещения.
+                    На основе полученных данных определяется оптимальный формат, позиционирование и стилистика.
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+            <li>
+                <img src="../image/complex/image5.jpg" width="570" alt="">
+                <h2>Для салонов красоты</h2>
+                <p>Дизайн салона красоты во многом зависит от его  спектра услуг. 
+                    Уникальная обстановка стала неотъемлемой частью рекламной компании любого заведения. 
+                    Одной вывески мало, чтобы завлечь и удержать клиентов, так как на рынке подобных услуг жесткая конкуренция. 
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+            <li>
+                <img src="../image/complex/image6.jpg" width="570" alt="">
+                <h2>Для торговых центров</h2>
+                <p>Творческое, основанное на знании психологии и маркетинга, оформление торговых центров, становится одним из 
+                    самых важных инструментов графического дизайна. С его помощью торговый центр можно сделать интересным для покупателей.
+                </p>
+                <a href="">Подробнее</a>
+            </li>
+        </ul>
+    </section>
     <footer>
         <div>
             <div>
