Создание HTML разметки

--- a/html/stores.html
+++ b/html/stores.html
@@ -17,6 +17,139 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- Для магазинов -->
+        <section>
+            <h1>Для магазинов</h1>
+            <p> Создаём уютную атмосферу внутри магазина, 
+                подчёркиваем нужные товарные категории, скрываем 
+                недостатки и задаём положительный покупательский настрой.
+            </p>
+        </section>
+        <div>
+            <img src="../image/stores/image1.jpg" width="1400" alt="">
+        </div>
+        <!-- Готовое решение -->
+        <section>
+            <h2>Готовое решение для повышения продаж</h2>
+            <p>Сейчас, торговой точке уже недостаточно иметь только удобное месторасположение и вывеску. 
+                Необходимо создать приятную  атмосферу внутри магазина и разработать красивый дизайн. 
+                Дизайн интерьера, атмосфера внутри магазина, правильное расположение оборудования, 
+                POS-материалы и оформление витрин – всё это может значительно повысить продажи.
+                Для оформления товарных отделов часто используют различные виды рекламной продукции и 
+                POS-материалы, что позволяет произвести грамотную расстановку товарных групп, так чтобы 
+                потребитель смог обойти торговое пространство целиком. Наиболее часто используют следующие 
+                POS-материалы: ценники, шелфтокеры, воблеры, буклеты, листовки, плакаты, флаеры и т.д. 
+            </p>
+        </section>
+        <!-- Фасад -->
+        <section>
+            <p>01</p>
+            <h2>Фасад</h2>
+            <ul>
+                <li>
+                    <button type="button">Вывеска</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление витрин</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Баннер</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление козырька</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Рекламный стенд</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Штендер</button>
+                    <p></p>
+                </li>
+            </ul>
+            <img src="../image/works/image4.jpg" width="570" alt="">
+            <button type="button"></button>
+        </section>
+        <!-- Торговый зал -->
+        <section>
+            <p>02</p>
+            <h2>Торговый зал</h2>
+            <ul>
+                <li>
+                    <button type="button">Навигация</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Торговые стойки</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление стеллажей</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">POS-материалы</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Промопродукция</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Форма для сотрудников</button>
+                    <p></p>
+                </li>
+            </ul>
+            <img src="../image/stores/image2.jpg" width="570" alt="">
+            <button type="button"></button>
+        </section>
+        <!-- Преимущества -->
+        <section>
+            <h2>Преимущества комплексного подхода</h2>
+            <ul>
+                <li>
+                    <p>01</p>
+                    <h3>Рост покупателей торговой сети</h3>
+                    <p>Постоянный поток покупателей с близлежащих и отдаленных от магазина территорий.</p>
+                </li>
+                <li>
+                    <p>02</p>
+                    <h3>Рост продаж и увеличение прибыли</h3>
+                    <p>Высокий спрос покупателей прямо пропорционален росту прибыли магазина.</p>
+                </li>
+                <li>
+                    <p>03</p>
+                    <h3>Повышение доверия к ритейл бренду</h3>
+                    <p>Потребитель запомнит вас среди многообразия других торговых точек и доверится вам.</p>
+                </li>
+                <li>
+                    <p>04</p>
+                    <h3>Укрепление имиджа торговой компании</h3>
+                    <p>Создание единого и узнаваемого образа компании укрепит ваши позиции на рынке.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Заяка -->
+        <section>
+            <h2>Заявка</h2>
+            <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
+            </p>
+            <form action="">
+                <input type="text" name="username" placeholder="Имя"> <br>
+                <input type="tel" name="telephone" placeholder="Телефон"> <br>
+                <input type="text" name="comment" placeholder="Комментарий к заявке"> <br>
+                <input type="file" name="file">
+                <button type="button">отправить</button>
+                <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+            </form>
+        </section>
+        <button type="button">Для кафе и ресторанов</button>
+    </main>
     <footer>
         <div>
             <div>
