--- a/html/restaurants.html
+++ b/html/restaurants.html
@@ -17,6 +17,138 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- Для кафе и ресторанов -->
+        <section>
+            <h1>Для кафе и ресторанов</h1>
+            <p> Тщательно продумываем оформление кафе или ресторана,
+                которое отвечает запросам целевой аудитории, бизнес-
+                идее, актуально и конкурентоспособно в наше время.
+            </p>
+        </section>
+        <div>
+            <img src="../image/restaurants/image1.jpg" width="1400" alt="">
+        </div>
+        <!-- Готовое решение -->
+        <section>
+            <h2>Готовое решение для эффективной работы</h2>
+            <p>Кафе и рестораны являются помещениями, основное предназначение которых организовать полноценный отдых посетителя 
+                от трудовых будней.  Именно поэтому к их стилю оформления предъявляется много требований, основными из которых 
+                являются оригинальность и современность, при неизменном комфорте.  Приятная атмосфера заведения заставит гостей 
+                вернуться в следующий раз и привести с собой коллег или друзей. Мы предлагаем все, что необходимо для современного 
+                и качественного оформления ресторана, кафе или бара. Начиная с разработки фирменного стиля и заканчивая красочным 
+                и запоминающимся оформлением фасадов. Осуществляем изготовление и печать: меню, вывескок, листовок, сувениров и т. д. 
+                Все работы  выполняются специалистами с большим стажем работы, с учетом всех ваших пожеланий.
+            </p>
+        </section>
+        <!-- Фасад -->
+        <section>
+            <p>01</p>
+            <h2>Фасад</h2>
+            <ul>
+                <li>
+                    <button type="button">Вывеска</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление витрин</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Баннер</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление козырька</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Рекламный стенд</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Штендер</button>
+                    <p></p>
+                </li>
+            </ul>
+            <img src="../image/restaurants/image2.jpg" width="570" alt="">
+            <button type="button"></button>
+        </section>
+        <!-- Зал -->
+        <section>
+            <p>02</p>
+            <h2>Зал</h2>
+            <ul>
+                <li>
+                    <button type="button">Навигация</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Торговые стойки</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Оформление стеллажей</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">POS-материалы</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Промопродукция</button>
+                    <p></p>
+                </li>
+                <li>
+                    <button type="button">Форма для сотрудников</button>
+                    <p></p>
+                </li>
+            </ul>
+            <img src="../image/restaurants/image3.jpg" width="570" alt="">
+            <button type="button"></button>
+        </section>
+        <!-- Преимущества -->
+        <section>
+            <h2>Преимущества комплексного подхода</h2>
+            <ul>
+                <li>
+                    <p>01</p>
+                    <h3>Рост покупателей торговой сети</h3>
+                    <p>Постоянный поток покупателей с близлежащих и отдаленных от магазина территорий.</p>
+                </li>
+                <li>
+                    <p>02</p>
+                    <h3>Рост продаж и увеличение прибыли</h3>
+                    <p>Высокий спрос покупателей прямо пропорционален росту прибыли магазина.</p>
+                </li>
+                <li>
+                    <p>03</p>
+                    <h3>Повышение доверия к ритейл бренду</h3>
+                    <p>Потребитель запомнит вас среди многообразия других торговых точек и доверится вам.</p>
+                </li>
+                <li>
+                    <p>04</p>
+                    <h3>Укрепление имиджа торговой компании</h3>
+                    <p>Создание единого и узнаваемого образа компании укрепит ваши позиции на рынке.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Заяка -->
+        <section>
+            <h2>Заявка</h2>
+            <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами в ближайшее время
+            </p>
+            <form action="">
+                <input type="text" name="username" placeholder="Имя"> <br>
+                <input type="tel" name="telephone" placeholder="Телефон"> <br>
+                <input type="text" name="comment" placeholder="Комментарий к заявке"> <br>
+                <input type="file" name="file">
+                <button type="button">отправить</button>
+                <p>Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
+            </form>
+        </section>
+        <button type="button">Для кафе и ресторанов</button>
+    </main>
     <footer>
         <div>
             <div>
