--- a/html/flyers.html
+++ b/html/flyers.html
@@ -248,7 +248,7 @@
                     <p>Входная группа и вывеска</p>
                 </li>
             </ul>
-            <button type="button">все работы</button>
+            <a href="">Все работы</a>
         </section>
         <!-- Заяка -->
         <section>
