--- a/html/services.html
+++ b/html/services.html
@@ -30,7 +30,7 @@
                 Все работы по дизайну осуществляются максимально  качественно и оперативно.
             </p>
             <img src="../image/services/image1.jpg" width="570" alt="">
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
         <!-- Согласование вывески -->
         <section>
@@ -58,7 +58,7 @@
                     <p>Осуществляем согласование документов в соответствующих инстанциях, после чего передаём вам готовый пакет документов.</p>
                 </li>
             </ul>
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
         <!-- Фотопривязка -->
         <section>
@@ -68,7 +68,7 @@
                 Фотопривязка имеет огромное значение при изготовлении рекламных конструкций разного размера, от простых до самых сложных форм и обязательна для согласования с городом.
             </p>
             <img src="../image/services/image4.jpg" width="570" alt="">
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
         <!-- Разработка фирменного стиля -->
         <section>
@@ -100,7 +100,7 @@
                     <p>Фиксированный набор фирменных цветов, помогает сделать бренд узнаваемым в любом визуализированном пространстве.</p>
                 </li>
             </ul>
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
         <!-- Монтаж/демонтаж -->
         <section>
@@ -115,7 +115,7 @@
                 что гарантирует качество работ.
             </p>
             <img src="../image/services/image6.jpg" width="570" alt="">
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
         <!-- Обслуживание вывесок -->
         <section>
@@ -145,7 +145,7 @@
                     <p>Мы работаем с разными типами конструкций, осуществляем ремонт любой сложности  и даём гарантию на выполненные работы.</p>
                 </li>
             </ul>
-            <button type="button">Прайс-лист</button>
+            <a href="">Прайс-лист</a>
         </section>
     </main>
     <footer>
