--- a/html/about.html
+++ b/html/about.html
@@ -167,7 +167,7 @@
                     <p>Входная группа и вывеска</p>
                 </li>
             </ul>
-            <button type="button">все работы</button>
+            <a href="">Все работы</a>
         </section>
         <!-- Заявка -->
         <section>
