--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -207,7 +207,7 @@
                     <p>Входная группа и вывеска</p>
                 </li>
             </ul>
-            <button type="button">все работы</button>
+            <a href="">Все работы</a>
         </section>
         <!-- Заяка -->
         <section>
