--- a/html/posts.html
+++ b/html/posts.html
@@ -136,7 +136,7 @@
                     <button type="button">подробнее</button>
                 </li>
             </ul>
-            <button type="button">Показать ещё</button>
+            <a href="">показать еще</a>
         </section>
     </main>
     <footer>
