--- a/html/works.html
+++ b/html/works.html
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
             </div>
-            <button type="button">Показать ещё</button>
+            <a href="">показать еще</a>
         </section>
     </main>
     <footer>
